Fix compile error in ThreadsWebAgent.